[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "recover"
path = "src/recover.rs"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
hex = "0.4.3"
protocol = { path = "../protocol" }
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
