[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
async-trait = "0.1.80"
conquer-once = "0.4.0"
fs4 = { version = "0.8", features = ["tokio"] }
hex = { version = "0.4.3", features = ["serde"] }
ecdsa_fun = { version = "0.10.0", default-features = false, features = [
    "adaptor",
    "serde",
] }
sha2 = "0.10"
sigma_fun = { version = "0.7.0", default-features = false, features = [
    "ed25519",
    "serde",
    "secp256k1",
    "alloc",
] }
rand = "0.8"
rand_chacha = "0.3"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["full"] }
monero = { version = "0.20.0", features = ["full", "serde"] }
bitcoin_hashes = "0.14.0"
bitcoincash = { version = "0.29.2", features = ["serde"] }
bech32 = "0.9.1"
hex-literal = "0.4.1"
monero-rpc = { git = 'https://github.com/monero-rs/monero-rpc-rs.git', branch = 'dependabot/cargo/monero-0.20' }
anyhow = "1.0.82"
